--- a/templates/events.html
+++ b/templates/events.html
@@ -4,6 +4,7 @@
 
         <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@3.5.0/css/flag-icon.min.css">
 
         <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -59,8 +60,9 @@
             <table id="content-table">
                 <tr>
                     <th>Name</th>
-                    <th>Description</th>
-                    <th>Date</th>
+                    <th>Start Date</th>
+                    <th>Duration</th>
+                    <th>Country</th>
                 </tr>
             </table>
         </div>
@@ -97,7 +99,14 @@
 
                     $(".event").remove();
                     for(const event of data) {
-                        $("#content-table").append(`<tr class="event"><td>${event.name}</td><td>${event.description||"-"}</td><td>${event.date||"-"}</td></tr>`);
+                        $("#content-table").append(`
+                            <tr class="event">
+                                <td>${event.name}</td>
+                                <td>${event.start}</td>
+                                <td>${event.duration}</td>
+                                <td><span class="flag-icon flag-icon-${event.country}"></span></td>
+                            </tr>
+                        `);
                     }
                 }
             };
