Changed Name - Stable

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,12 +10,12 @@
     <body>
         <nav class="light-blue">
             <div class="nav-wrapper container">
-                <a href="/" id="brand-logo" class="white-text brand-logo">4x4 Calendar</a>
+                <a href="/" id="brand-logo" class="white-text brand-logo">4x4sport.info</a>
                 <i class="material-icons right">account_box</i>
             </div>
         </nav>
         <div class="container">
-            <h2 class="header center">4x4 Calendar</h2>
+            <h2 class="header center">Welcome!</h2>
 
             <div class="row">
                 <div class="col s12 m6 l4">
