--- a/templates/events.html
+++ b/templates/events.html
@@ -23,7 +23,7 @@
     <body>
         <nav class="light-blue">
             <div class="nav-wrapper container">
-                <a href="/" id="brand-logo" class="white-text brand-logo">4x4 Calendar</a>
+                <a href="/" id="brand-logo" class="white-text brand-logo">4x4sport.info</a>
                 <i class="material-icons right">account_box</i>
             </div>
         </nav>
