Changed from rally to rallye
Grammatically correct

--- a/templates/events.html
+++ b/templates/events.html
@@ -46,7 +46,7 @@
                                 <label id="type-label">Types:</label>
                                 <select name="types" id="type-select" multiple>
                                     <option value="trophy" selected>Trophy</option>
-                                    <option value="rally" selected>Rally</option>
+                                    <option value="rallye" selected>Rallye</option>
                                     <option value="trial" selected>Trial</option>
                                     <option value="meeting" selected>Meeting</option>
                                     <option value="free-driving" selected>Free Driving</option>
