--- a/templates/view.html
+++ b/templates/view.html
@@ -21,30 +21,71 @@
             <div class="hide-on-med-and-up">
                 Minimap
             </div>
-            <div class="row">
-                <div class="col s12 m8">
-                    <table>
-                        <tr>
-                            <td>Name</td>
-                            <td><div id="name-field"></div></td>
-                        </tr>
-                        <tr>
-                            <td>Start</td>
-                            <td><div id="start-field"></div></td>
-                        </tr>
-                        <tr>
-                            <td>Duration</td>
-                            <td><div id="duration-field"></div></td>
-                        </tr>
-                    </table>
+            <div class="section">
+                <h5>Information</h5>
+                <div class="divider"></div>
+
+                <div class="row">
+                    <div class="col s12 m8">
+                        <table>
+                            <tr>
+                                <td>Name</td>
+                                <td><div id="name-field"></div></td>
+                            </tr>
+                            <tr>
+                                <td>Description</td>
+                                <td><a id="description-button" href="#description" class="hide btn modal-trigger">View ></a></td>
+                            </tr>
+                            <tr>
+                                <td>Start</td>
+                                <td><div id="start-field"></div></td>
+                            </tr>
+                            <tr>
+                                <td>Duration</td>
+                                <td><div id="duration-field"></div></td>
+                            </tr>
+                            <tr>
+                                <td>Country</td>
+                                <td><div id="country-field"></div></td>
+                            </tr>
+                            <tr>
+                                <td>Classes</td>
+                                <td><div id="classes-field"></div></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="col m4 hide-on-small-only">
+                        Maximap
+                    </div>
                 </div>
-                <div class="col m4 hide-on-small-only">
-                    Maximap
-                </div>
+            </div>
+            <div class="section">
+                <h5>Logo</h5>
+                <div class="divider"></div><br>
+                <div id="logo-field"></div>
+            </div>
+            <div class="section">
+                <h5>Media</h5>
+                <div class="divider"></div><br>
+                <a id="media-button" href="#media" class="hide btn modal-trigger">View ></a>
+            </div>
+            <div class="section">
+                <h5>Links</h5>
+                <div class="divider"></div>
+                <div id="links-field"></div>
+            </div>
+        </div>
+
+        <div id="media" class="modal"></div>
+        <div id="description" class="modal">
+            <div class="container">
+                <span class="flow-text" id="description-field"></span>
             </div>
         </div>
     </body>
     <script>
+        M.AutoInit();
+
         let query = new URLSearchParams(document.location.search);
 
         let xhr = new XMLHttpRequest();
@@ -53,10 +94,49 @@
                 let data = JSON.parse(this.responseText);
 
                 let event = data[0];
+                console.log(JSON.stringify(event));
 
                 $("#name-field").text(event.name);
+
+                if(event.description) {
+                    $("#description-button").removeClass("hide");
+                    $("#description-field").text(event.description);
+                }
+
                 $("#start-field").text(event.start);
+
                 $("#duration-field").text(event.duration);
+
+                $("#country-field").text(event.country.toUpperCase());
+
+                if(event.classes) $("#classes-field").html(`
+                    <ul>
+                        ${event.classes.map(i => `<li>${i}</li>`).join("")}
+                    </ul>
+                `);
+
+                if(event.logo) $("#logo-field").html(`
+                    <img style="width: 100%; max-width: 200pt;" src="images/${event.logo}"></img>
+                `);
+
+                if(event.media) {
+                    $("#media-button").removeClass("hide");
+                    $("#media").html(event.media.map(i => `
+                        <img src="images/${i}" width="100%"></img>
+                    `));
+                }
+
+                if(event.links) $("#links-field").html(`
+                    <ul>
+                        ${Object.keys(event.links).map(i => `
+                            <li>
+                                <a href="${event.links[i]}">
+                                    <h6>${i}</h6>
+                                </a>
+                            </li>
+                        `).join("")}
+                    </ul>
+                `);
             }
         };
 
