Added "Events" Link - Stable

--- a/templates/events.html
+++ b/templates/events.html
@@ -24,7 +24,9 @@
         <nav class="light-blue">
             <div class="nav-wrapper container">
                 <a href="/" id="brand-logo" class="white-text brand-logo">4x4sport.info</a>
-                <i class="material-icons right">account_box</i>
+                <ul class="right hiden-on-med-and-down">
+                    <li><a href="events">Events</a></li>
+                </ul>
             </div>
         </nav>
 
