--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
         <nav class="light-blue">
             <div class="nav-wrapper container">
                 <a href="/" id="brand-logo" class="white-text brand-logo">4x4sport.info</a>
-                <ul class="right hiden-on-med-and-down">
+                <ul class="right hide-on-med-and-down">
                     <li><a href="events">Events</a></li>
                 </ul>
             </div>
