Created General Files - Stable

--- a/templates/events.html
+++ b/templates/events.html
@@ -9,16 +9,9 @@
         <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <style>
-            .collapsible li i {
-                transition: 200ms;
-            }
-            .collapsible li.active i {
-                transform: rotate(180deg);
-
-                transition: 200ms;
-            }
-        </style>
+        
+        <link rel="stylesheet" href="css/general.css">
+        <script src="js/general.js"></script>
     </head>
     <body>
         <nav class="light-blue">
