Added Sorting UI

--- a/templates/events.html
+++ b/templates/events.html
@@ -57,10 +57,26 @@
             </ul>
             <table id="content-table">
                 <tr>
-                    <th>Name</th>
-                    <th>Start Date</th>
-                    <th>Duration</th>
-                    <th>Country</th>
+                    <th id="name-tag">
+                        Name
+                        <br class="hide-on-med-and-up">
+                        <span class="sort center" id="name-sort"></span>
+                    </th>
+                    <th id="start-tag">
+                        Start
+                        <br class="hide-on-med-and-up">
+                        <span class="sort center" id="start-sort"></span>
+                    </th>
+                    <th id="duration-tag">
+                        Duration
+                        <br class="hide-on-med-and-up">
+                        <span class="sort center" id="duration-sort"></span>
+                    </th>
+                    <th id="country-tag">
+                        Country
+                        <br class="hide-on-med-and-up">
+                        <span class="sort center" id="country-sort"></span>
+                    </th>
                 </tr>
             </table>
         </div>
