--- a/public/css/general.css
+++ b/public/css/general.css
@@ -15,3 +15,10 @@
 .media {
     width: 100%;
 }
+
+@media only screen and (max-width: 600px) {
+    .sort {
+        display: block;
+        width: 100%;
+    }
+}
